# go-swag

./: .gitignore  MODULE.bazel  README.md  go.mod  go.sum
example/: BUILD.bazel  README.md  main.go
example/fiber/: BUILD.bazel  README.md  main.go
examples/gofiber/: BUILD.bazel  README.md  main.go
examples/http/: BUILD.bazel  README.md  main.go
fiber_example/: BUILD.bazel
go/swagger/: def.bzl  extensions.bzl
go/swagger/private/: repositories.bzl  swag_docs.bzl
