load("//go/swagger:def.bzl", "swag_docs", "swag_init_script")

# Generate Swagger documentation into the source tree for easy iteration.
swag_init_script(
    name = "generate_docs",
    general_info = "example/fiber/main.go",
    output_dir = "example/fiber/docs",
    search_dirs = ["example/fiber"],
    parse_dependency = False,
    parse_internal = False,
)

# Hermetic swag_docs target that writes outputs under bazel-bin.
swag_docs(
    name = "fiber_docs",
    srcs = glob(["**/*.go"]),
    general_info = "main.go",
    search_dirs = ["example/fiber"],
    output_types = ["json", "yaml", "go"],
)
