load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//go/swagger:def.bzl", "swag_init_script")

# Generate Swagger documentation
# This is the main use case - generating swagger.json/yaml from Go annotations
swag_init_script(
    name = "generate_docs",
    general_info = "main.go",
    output_dir = "examples/http/docs",
    search_dirs = ["examples/http"],
    parse_dependency = False,
    parse_internal = False,
)

go_library(
    name = "example_lib",
    srcs = ["main.go"],
    importpath = "github.com/NKI-AI/rules-go-swag/examples/http",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "example",
    data = ["docs/swagger.json"],
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)
